# bazel_java_usage

./: README.md  WORKSPACE
junit4/src/main/java/com/soonpan/bazeljunit4/: BUILD.bazel  Great.java  Hello.java
junit4/src/main/java/com/soonpan/cache/: BUILD.bazel  Cache.java
junit4/src/test/java/com/soonpan/bazeljunit4/: BUILD.bazel  GreatTest.java  HelloTest.java
junit4/src/test/java/com/soonpan/cache/: BUILD.bazel  CacheTest.java
junit5/src/main/java/com/soonpan/bazel/: BUILD.bazel  Hello.java
junit5/src/main/java/com/soonpan/bazeljunit5/: BUILD.bazel  Hello5.java
junit5/src/test/java/com/soonpan/bazel/: BUILD.bazel  HelloTest.java
junit5/src/test/java/com/soonpan/bazeljunit5/: BUILD.bazel  GreatTest.java  Hello5Test.java
junit5/src/test/java/com/soonpan/cache5/: BUILD.bazel
tools/junit5/: JUnit5Launcher.java
