java_library(
    name = "bazel_junit4_lib",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [],
)

java_binary(
    name = "hello",
    main_class = "com.soonpan.bazeljunit4.Hello",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":bazel_junit4_lib",
    ],
)

java_binary(
    name = "great",
    main_class = "com.soonpan.bazeljunit4.Great",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":bazel_junit4_lib",
    ],
)
