java_library(
    name = "bazel_cache_lib",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [],
)

java_binary(
    name = "cache",
    main_class = "com.soonpan.cache.Cache",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":bazel_cache_lib",
    ],
)
