java_test(
    name = "GreatTest",
    srcs = ["GreatTest.java"],
    runtime_deps = [
        "@maven//:junit_junit",
    ],
    deps = [
        "//junit4/src/main/java/com/soonpan/bazeljunit4:bazel_junit4_lib",
    ],
)

java_test(
    name = "HelloTest",
    srcs = ["HelloTest.java"],
    runtime_deps = [
        "@maven//:junit_junit",
    ],
    deps = [
        "//junit4/src/main/java/com/soonpan/bazeljunit4:bazel_junit4_lib",
    ],
)
