load("@rules_jvm_external//:defs.bzl", "artifact")
load("@contrib_rules_jvm//java:defs.bzl", "JUNIT5_DEPS", "java_test_suite")
load("//tools/junit5:defs.bzl", "java_junit5_test")

java_junit5_test(
    name = "tests",
    srcs = glob(["*.java"]),
    resources = glob(["src/test/resources/**"]),
    test_packages = [
        "com.soonpan.bazeljunit5",
    ],
    visibility = ["//visibility:__subpackages__"],
    runtime_deps = [
        "@maven//:org_slf4j_slf4j_simple",
    ],
    deps = [
        "//junit5/src/main/java/com/soonpan/bazeljunit5:hellolib",
        "@maven//:commons_io_commons_io",
    ],
)
